--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_CANDY_MACHINE_CONFIG=
-REACT_APP_CANDY_MACHINE_ID=
-REACT_APP_TREASURY_ADDRESS=
-REACT_APP_CANDY_START_DATE=
+REACT_APP_CANDY_MACHINE_CONFIG=7hEsnxDQhJiAfF8gupGjcpTmmxs2znhWaJa5AAYkH2s4
+REACT_APP_CANDY_MACHINE_ID=7PiY449Ekc3Fd1V8dwMfUYQPhYAA3w7JXDnPgsnxwkbR
+REACT_APP_TREASURY_ADDRESS=635Q6CnUGYMjRNoetBY6Axq3ssNwMWBgaZG2CF4qvdCe
+REACT_APP_CANDY_START_DATE=1636143576.942
 
 REACT_APP_SOLANA_NETWORK=devnet
 REACT_APP_SOLANA_RPC_HOST=https://explorer-api.devnet.solana.com
